--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   fancy_bottom_navigation: ^0.3.2
   font_awesome_flutter: ^8.7.0
+  qrscan: ^0.2.17
 
 dev_dependencies:
   flutter_test:
